--- a/MasterPage.master
+++ b/MasterPage.master
@@ -29,15 +29,18 @@ http://naspinski.net
         <asp:ScriptManager ID="ScriptManager1" runat="server" />
         <asp:UpdateProgress ID="UpdateProgress" runat="server" >
             <ProgressTemplate>
-                <div class="working">working...</div>
+                <asp:panel ID="pnlWorking" runat="server" cssclass="working">
+                    <asp:literal ID="litWorking" runat="server" meta:resourcekey="litWorkingResource1" />
+                </asp:panel>
             </ProgressTemplate>
         </asp:UpdateProgress>
         
         <div id="header" class="border_color" >
             <h1 class="top_header">
                 <a runat="server" id="home" href="~/">
-                    <asp:Image ID="imgTitle" runat="server" AlternateText="" />
-                    <asp:Label ID="lblTitle" CssClass="header" style="font-size:2em;" runat="server">Slick Ticket</asp:Label>
+                    <asp:Image ID="imgTitle" runat="server" 
+                    meta:resourcekey="imgTitleResource1" />
+                    <asp:Label ID="lblTitle" CssClass="header" style="font-size:2em;" runat="server" Text="Slick-Ticket" />
                 </a>
             </h1>
             <div class="top_header" style="padding:0 10px 0 0;">
@@ -60,7 +63,7 @@ http://naspinski.net
                     </div>
                 </asp:Panel>
                 
-                <asp:Panel runat="server" id="side_bar">
+                <asp:Panel runat="server" id="side_bar" >
                     <div class="small_container border_color">
                         <fieldset class="inner_color">
                             <table id="current_page">
@@ -79,18 +82,21 @@ http://naspinski.net
                         <fieldset class="inner_color">
                         
                             <h2>
-                                <a runat="server" style="float:right;" class="smaller" href="~/profile.aspx">Profile</a>
+                                <a runat="server" style="float:right;" class="smaller" href="~/profile.aspx">
+                                    <%= Resources.Common.Profile %>
+                                </a>
                                 <asp:Label ID="lblUserName" runat="server" />
                             </h2>
                             <asp:Label ID="lblTickets" runat="server" />
                             <div style="text-align:left;">
                                 <br />
                                 <asp:Label ID="lblEmail" runat="server" /><br />
-                                <asp:Label ID="lblPhone" runat="server" /><br />
+                                <asp:Label ID="lblPhone" runat="server"  /><br />
                                 <asp:Label ID="lblUnit" runat="server" /><br />
                                 <asp:Label ID="lblSubUnit" runat="server" />
                                 <div class='bold'>
-                                    <br />Access: [<asp:Label ID="lblAccess" runat="server" Text="X" />] 
+                                    <br /><asp:literal ID="litAccess" runat="server" meta:resourcekey="litAccessResource1" />
+                                    : [<asp:Label ID="lblAccess" runat="server" meta:resourcekey="lblAccessResource1" />] 
                                     <asp:Label ID="lblAccessName" runat="server" />
                                 </div>
                             </div>
@@ -101,10 +107,11 @@ http://naspinski.net
                             <asp:Panel ID="pnlquik" runat="server" DefaultButton="btnQuickJump">
                                 <h2>
                                 <asp:RegularExpressionValidator ID="regQuickJump" CssClass="error top_error" ValidationExpression="^\d+$" ValidationGroup="QuickJump"
-                                    ControlToValidate="txtQuickJump" runat="server" ErrorMessage="Invalid ticket number<br />" Display="Dynamic" />
-                                <span>Quick Jump</span>
+                                    ControlToValidate="txtQuickJump" runat="server" Display="Dynamic" meta:resourcekey="regQuickJumpResource1" />
+                                <asp:label ID="lblQuickJump" runat="server" meta:resourcekey="lblQuickJumpResource1" />
                                 <asp:TextBox ID="txtQuickJump" runat="server" style="width:70px;" />
-                                <asp:Button CssClass="button smaller" ID="btnQuickJump"  runat="server"  Text="Go" onclick="btnQuickJump_Click" CausesValidation="true" ValidationGroup="QuickJump" />
+                                <asp:Button CssClass="button smaller" ID="btnQuickJump"  runat="server" onclick="btnQuickJump_Click" ValidationGroup="QuickJump" 
+                                    meta:resourcekey="btnQuickJumpResource1" />
                                 </h2>
                             </asp:Panel>
                         </fieldset>
@@ -113,8 +120,10 @@ http://naspinski.net
                 </asp:Panel>
                 <div id="footer">
                     <asp:Label ID="lblFooter" runat="server" />
-                    <asp:Panel ID="pnlFooter" CssClass="footer" runat="server">
+                    <asp:Panel ID="pnlFooter" CssClass="footer" runat="server" >
                     </asp:Panel>
+                    <br /><a href="http://slick-ticket.com">Slick-Ticket</a> &copy;2008-<%= DateTime.Now.Year %> <a href="http://naspinski.net">Stan Naspinski</a><br />
+                    <asp:literal runat="server" ID="litLicensedUnder" meta:resourcekey="litLicensedUnderResource1" /> <a href="http://slickticket.codeplex.com/license">MIT License</a>
                 </div>
             </div>
         </div>
