--- a/css/main.css
+++ b/css/main.css
@@ -96,7 +96,7 @@ ul.list_menu li a:hover{ text-decoration:none;}
  
 .right { float:right;}
 .left { float:left; }
-
+.sub { padding-left:2em; }
     
 a.tooltip{position:relative; z-index:0;}
    a.tooltip:hover{z-index:25; cursor:default;}
